apps/littlelink/prod/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: littlelink
spec:
  virtualhost:
    fqdn: littlelink.etsmtl.club
    tls:
      secretName: littlelink-tls
      minimumProtocolVersion: "1.3"
  routes:
    - conditions:
        - prefix: /
      enableWebsockets: true
      services:
        - name: littlelink-service
          port: http
